--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  background-image: url("/IE4717/F38-DG16-Project/IE4717-Project/images/background.jpg");
   background-image: url("/images/background.jpg");
 }
 
@@ -14,6 +15,7 @@ body {
   margin: auto;
   padding: 10px;
   /* background-color: #333333; */
+  background-image: url("/IE4717/F38-DG16-Project/IE4717-Project/images/background2.jpg");
   background-image: url("/images/background2.jpg");
   color: white;
   height: 150px;
@@ -73,7 +75,6 @@ div #topright {
 }
 
 /* ---START OF LOGIN FORM--- */
-
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
   cursor: pointer;
@@ -139,8 +140,8 @@ div #topright {
 }
 /* ---END OF LOGIN FORM--- */
 
-/* ---START OF NAVBAR--- */
 
+/* ---START OF NAVBAR--- */
   #navbar {
     margin-top: 20px;
     text-align: center;
@@ -163,14 +164,14 @@ div #topright {
   #navbar ul li {
     display: inline;
   }
-
 /* ---END OF NAVBAR--- */
 
-/* ---START OF BANNER--- */
 
+/* ---START OF BANNER--- */
 .banner h1 {
   text-align: center;
   /* background-color: #333333; */  
+  background-image: url("/IE4717/F38-DG16-Project/IE4717-Project/images/background2.jpg");
   background-image: url("/images/background2.jpg");
   color: white;
   margin-bottom: 0;
@@ -199,14 +200,13 @@ div #topright {
   text-align: center;
   font-size: 30px;
 }
-
 /* ---END OF BANNER--- */
 
 
 /* ---START OF FOOTER--- */
-
   #footer {
     /* background-color: #333333; */
+    background-image: url("/IE4717/F38-DG16-Project/IE4717-Project/images/background2.jpg");
     background-image: url("/images/background2.jpg");
     color: white;
     text-align: center;
@@ -240,5 +240,4 @@ div #topright {
     margin:0;
     padding: 20px;
   }
-
 /* ---END OF FOOTER--- */
