--- a/css/styles.css
+++ b/css/styles.css
@@ -148,11 +148,19 @@ div #topright {
 }
 /* ---END OF LOGIN FORM--- */
 
+/* ---START OF CONTENT WRAPPER--- */
+.Content_Wrapper {
+  margin: 0 auto;
+  max-width: 1200px; /* Adjust the maximum width as needed */
+  padding: 5px; /* Add padding around the content wrapper */
+}
+/* ---END OF CONTENT WRAPPER--- */
 
 /* ---START OF NAVBAR--- */
   #navbar {
     margin-top: 20px;
     text-align: center;
+	margin-bottom: 20px;
   }
 
   #navbar a {
@@ -173,6 +181,7 @@ div #topright {
     display: inline;
   }
 /* ---END OF NAVBAR--- */
+
 
 
 /* ---START OF BANNER--- */
@@ -249,4 +258,3 @@ div #topright {
     padding: 20px;
   }
 /* ---END OF FOOTER--- */
-
