--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url("/IE4717/F38-DG16-Project/IE4717-Project/images/background.jpg");
-  background-image: url("/images/background.jpg");
+  /* background-image: url("localhost:8000/IE4717/F38-DG16-Project/IE4717-Project/images/background.jpg");
+  background-image: url("/images/background.jpg"); */
 }
 
 #container {
@@ -14,9 +14,9 @@ body {
 #header {
   margin: auto;
   padding: 10px;
-  /* background-color: #333333; */
-  background-image: url("/IE4717/F38-DG16-Project/IE4717-Project/images/background2.jpg");
-  background-image: url("/images/background2.jpg");
+  background-color: #333333;
+  /* background-image: url("/IE4717/F38-DG16-Project/IE4717-Project/images/background2.jpg");
+  background-image: url("/images/background2.jpg"); */
   color: white;
   height: 150px;
 }
@@ -158,9 +158,9 @@ div #topright {
 
 /* ---START OF NAVBAR--- */
   #navbar {
-    margin-top: 20px;
     text-align: center;
-	margin-bottom: 20px;
+    margin-top: 20px;
+	  margin-bottom: 20px;
   }
 
   #navbar a {
@@ -179,6 +179,7 @@ div #topright {
 
   #navbar ul li {
     display: inline;
+    margin: 0;
   }
 /* ---END OF NAVBAR--- */
 
@@ -187,9 +188,9 @@ div #topright {
 /* ---START OF BANNER--- */
 .banner h1 {
   text-align: center;
-  /* background-color: #333333; */  
-  background-image: url("/IE4717/F38-DG16-Project/IE4717-Project/images/background2.jpg");
-  background-image: url("/images/background2.jpg");
+  background-color: #333333;  
+  /* background-image: url("/IE4717/F38-DG16-Project/IE4717-Project/images/background2.jpg");
+  background-image: url("/images/background2.jpg"); */
   color: white;
   margin-bottom: 0;
   padding: 30px;
@@ -222,9 +223,9 @@ div #topright {
 
 /* ---START OF FOOTER--- */
   #footer {
-    /* background-color: #333333; */
-    background-image: url("/IE4717/F38-DG16-Project/IE4717-Project/images/background2.jpg");
-    background-image: url("/images/background2.jpg");
+    background-color: #333333;
+    /* background-image: url("/IE4717/F38-DG16-Project/IE4717-Project/images/background2.jpg");
+    background-image: url("/images/background2.jpg"); */
     color: white;
     text-align: center;
     margin: auto;
