--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,6 @@ div #topright {
   position: fixed;
   border: 2px solid #f1f1f1;
   /* box-shadow: 2px 2px 2px #d1d1d1; */
-  /* z-index: 9; */
 }
 
 /* Add styles to the form container */
@@ -105,6 +104,7 @@ div #topright {
   padding: 10px;
   background-color: white;
   text-align: center;
+  color: black;
 }
 
 /* Full-width input fields */
@@ -209,7 +209,7 @@ div #topright {
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
-  position: relative; /* Add relative positioning */
+  /* position: relative; Add relative positioning */
   background-color: white;
 }
 
