--- a/css/cartstyles.css
+++ b/css/cartstyles.css
@@ -118,7 +118,7 @@ body {
     padding-bottom: 20px; /* Add your desired bottom padding */
 }
 
-.total-items {
+.total-items, .checkout-totalprice{
     font-size: 20px; /* Increase font size for better visibility */
 }
 
