--- a/css/contactstyles.css
+++ b/css/contactstyles.css
@@ -6,7 +6,7 @@ body {
 }
 
 #container {
-  width: 80%;
+  width: 100%;
   margin: auto;
 }
 
@@ -82,7 +82,7 @@ div #topright {
 /* ---START OF CONTENT WRAPPER--- */
 .Content_Wrapper {
   margin: 0 auto;
-  max-width: 1200px; /* Adjust the maximum width as needed */
+  max-width: 80%; /* Adjust the maximum width as needed */
   /*padding: 5px; /* Add padding around the content wrapper */
 }
 /* ---END OF CONTENT WRAPPER--- */
